--- a/Compenergy/app/src/main/res/layout/act_compare_nav_drawer_layout.xml
+++ b/Compenergy/app/src/main/res/layout/act_compare_nav_drawer_layout.xml
@@ -11,7 +11,8 @@
     <include
         layout="@layout/act_compare_main_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:orientation="vertical" />
 
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
