--- a/Compenergy/app/src/main/res/menu/activity_act_compare_drawer.xml
+++ b/Compenergy/app/src/main/res/menu/activity_act_compare_drawer.xml
@@ -5,7 +5,8 @@
         <item
             android:id="@+id/nav_compare"
             android:icon="@drawable/ic_menu_compare"
-            android:title="@string/nav_item_compare" />
+            android:title="@string/nav_item_compare"
+            android:checked="true"/>
         <item
             android:id="@+id/nav_data"
             android:icon="@drawable/ic_menu_data"
@@ -13,7 +14,7 @@
         <item
             android:id="@+id/nav_add_data"
             android:icon="@drawable/ic_menu_add_data"
-            android:title="Add Data" />
+            android:title="@string/nav_item_add_data" />
         <item
             android:id="@+id/nav_favorites"
             android:icon="@drawable/ic_menu_favorites"
