Added "Submit Data" menu item

--- a/Compenergy/app/src/main/res/menu/activity_act_compare_drawer.xml
+++ b/Compenergy/app/src/main/res/menu/activity_act_compare_drawer.xml
@@ -23,6 +23,10 @@
             android:id="@+id/nav_categories"
             android:icon="@drawable/ic_menu_categories"
             android:title="@string/nav_item_categories" />
+        <item
+            android:id="@+id/nav_submit_data"
+            android:icon="@drawable/ic_menu_submit_data"
+            android:title="@string/nav_item_submit_data" />
     </group>
 
     <item android:title="@string/navigation_second_group_title">
