--- a/Compenergy/app/src/main/res/values/drawables.xml
+++ b/Compenergy/app/src/main/res/values/drawables.xml
@@ -1,9 +1,10 @@
-<resources xmlns:android="http://schemas.android.com/apk/res/android">
+<resources>
     <item name="ic_menu_compare" type="drawable">@drawable/ic_compare_arrows_black_24dp</item>
     <item name="ic_menu_data" type="drawable">@drawable/ic_storage_black_24dp</item>
     <item name="ic_menu_add_data" type="drawable">@drawable/ic_add_circle_outline_black_24dp</item>
     <item name="ic_menu_favorites" type="drawable">@drawable/ic_grade_black_24dp</item>
     <item name="ic_menu_categories" type="drawable">@drawable/ic_inbox_black_24dp</item>
+    <item name="ic_menu_submit_data" type="drawable">@drawable/ic_present_to_all_black_24dp</item>
     <item name="ic_menu_settings" type="drawable">@drawable/ic_settings_black_24dp</item>
     <item name="ic_menu_about" type="drawable">@drawable/ic_info_outline_black_24dp</item>
     <item name="ic_menu_help" type="drawable">@drawable/ic_local_hospital_black_24dp</item>
