--- a/Compenergy/app/src/main/res/layout/act_main_content.xml
+++ b/Compenergy/app/src/main/res/layout/act_main_content.xml
@@ -10,6 +10,6 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="johannes.mols.compenergy.ActCompare"
-    tools:showIn="@layout/act_compare_main_layout">
+    tools:context="johannes.mols.compenergy.ActMain"
+    tools:showIn="@layout/act_main_layout">
 </RelativeLayout>
