--- a/Compenergy/app/src/main/res/layout/act_main_nav_drawer_layout.xml
+++ b/Compenergy/app/src/main/res/layout/act_main_nav_drawer_layout.xml
@@ -9,7 +9,7 @@
     tools:openDrawer="start">
 
     <include
-        layout="@layout/act_compare_main_layout"
+        layout="@layout/act_main_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical" />
@@ -20,7 +20,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
-        app:headerLayout="@layout/act_compare_nav_drawer_header"
+        app:headerLayout="@layout/act_main_nav_drawer_header"
         app:menu="@menu/activity_act_compare_drawer" />
 
 </android.support.v4.widget.DrawerLayout>
