--- a/Compenergy/app/src/main/res/layout/fragment_about_layout.xml
+++ b/Compenergy/app/src/main/res/layout/fragment_about_layout.xml
@@ -1,19 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:padding="10dp" >
 
     <TextView
-        android:id="@+id/fragment_about_txt_test"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
+        android:id="@+id/fragment_about_app_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="About Fragment"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-        android:textAlignment="center" />
+        android:text="App name"
+        android:textAlignment="textStart" />
 
-</RelativeLayout>
+</LinearLayout>
