--- a/Compenergy/app/src/main/res/layout/fragment_data_layout.xml
+++ b/Compenergy/app/src/main/res/layout/fragment_data_layout.xml
@@ -1,12 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
+    <EditText
+        android:id="@+id/fragment_data_edit_txt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="text"
+        android:hint="Type in carrier name" />
+
+    <Button
+        android:id="@+id/fragment_data_button_add"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Add Carrier"/>
+
+    <Button
+        android:id="@+id/fragment_data_button_delete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Delete Carrier"/>
+
     <TextView
+        android:id="@+id/fragment_data_txt_output"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Output"
+        android:textAlignment="textStart" />
+
+    <!--<TextView
         android:id="@+id/fragment_data_txt_test"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
@@ -14,6 +40,6 @@
         android:layout_height="wrap_content"
         android:text="Data Fragment"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-        android:textAlignment="center" />
+        android:textAlignment="center" />-->
 
-</RelativeLayout>
+</LinearLayout>
