--- a/Compenergy/app/src/main/res/layout/fragment_data_layout.xml
+++ b/Compenergy/app/src/main/res/layout/fragment_data_layout.xml
@@ -26,6 +26,12 @@
         android:text="Delete Carrier"/>
 
     <Button
+        android:id="@+id/fragment_data_button_delete_all"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Delete All"/>
+
+    <Button
         android:id="@+id/fragment_data_button_drop_table"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
