--- a/Compenergy/app/src/main/res/layout/fragment_data_layout.xml
+++ b/Compenergy/app/src/main/res/layout/fragment_data_layout.xml
@@ -4,66 +4,71 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:padding="10dp" >
 
     <EditText
         android:id="@+id/fragment_data_edit_txt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="text"
-        android:hint="Type in carrier name" />
+        android:hint="@string/data_search_hint" />
+
+    <ListView
+        android:id="@+id/fragment_data_list_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <!-- Hidden until List View properly implemented, delete then -->
 
     <Button
+        android:visibility="gone"
         android:id="@+id/fragment_data_button_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Add Carrier"/>
 
     <Button
+        android:visibility="gone"
         android:id="@+id/fragment_data_button_delete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Delete Carrier"/>
 
     <Button
+        android:visibility="gone"
         android:id="@+id/fragment_data_button_delete_all"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Delete All"/>
 
     <Button
+        android:visibility="gone"
         android:id="@+id/fragment_data_button_drop_table"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Drop Table"/>
 
     <Button
+        android:visibility="gone"
         android:id="@+id/fragment_data_button_update"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Update Table"/>
 
     <Button
+        android:visibility="gone"
         android:id="@+id/fragment_data_button_get_carrier"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Get Carrier"/>
 
     <TextView
+        android:visibility="gone"
         android:id="@+id/fragment_data_txt_output"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Output"
         android:textAlignment="textStart" />
-
-    <!--<TextView
-        android:id="@+id/fragment_data_txt_test"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Data Fragment"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-        android:textAlignment="center" />-->
 
 </LinearLayout>
