Added a method for distinct category selection from the database (and other smaller things)

--- a/Compenergy/app/src/main/res/layout/listview_item_data_layout.xml
+++ b/Compenergy/app/src/main/res/layout/listview_item_data_layout.xml
@@ -9,7 +9,7 @@
             android:id="@+id/carrier_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=""
+            android:text="Carrier Name"
             android:textSize="18sp"
             android:textStyle="normal"
             android:textColor="@android:color/primary_text_light" />
