--- a/Compenergy/app/src/main/res/layout/listview_header_data_layout.xml
+++ b/Compenergy/app/src/main/res/layout/listview_header_data_layout.xml
@@ -15,6 +15,6 @@
         android:padding="10dp"
         android:background="@android:color/darker_gray"
         android:textColor="@android:color/primary_text_light"
-        android:text=""/>
+        android:text="Header"/>
 
 </LinearLayout>
