--- a/Compenergy/app/src/main/res/layout/listview_header_data_layout.xml
+++ b/Compenergy/app/src/main/res/layout/listview_header_data_layout.xml
@@ -6,13 +6,16 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/listview_header_data"
+        android:id="@+id/fragment_data_list_view_category"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="start"
         android:textStyle="bold"
         android:textSize="22sp"
-        android:padding="10dp"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:paddingBottom="8dp"
+        android:paddingTop="8dp"
         android:background="@android:color/darker_gray"
         android:textColor="@android:color/primary_text_light"
         android:text="@string/placeholder_header_listview"/>
