--- a/Compenergy/app/src/main/res/layout/listview_header_data_layout.xml
+++ b/Compenergy/app/src/main/res/layout/listview_header_data_layout.xml
@@ -11,12 +11,12 @@
         android:layout_height="wrap_content"
         android:gravity="start"
         android:textStyle="bold"
-        android:textSize="22sp"
+        android:textSize="18sp"
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
         android:paddingBottom="8dp"
         android:paddingTop="8dp"
-        android:background="@android:color/darker_gray"
+        android:background="@color/colorAccent"
         android:textColor="@android:color/primary_text_light"
         android:text="@string/placeholder_header_listview"/>
 
