--- a/Compenergy/app/src/main/res/values/colors.xml
+++ b/Compenergy/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#689f38</color>
+    <color name="colorPrimaryDark">#387002</color>
+    <color name="colorAccent">#99d066</color>
+
+    <color name="colorPrimaryDefault">#3F51B5</color>
+    <color name="colorPrimaryDarkDefault">#303F9F</color>
+    <color name="colorAccentDefault">#FF4081</color>
 </resources>
