--- a/Compenergy/app/src/main/res/layout/listview_item_data_layout.xml
+++ b/Compenergy/app/src/main/res/layout/listview_item_data_layout.xml
@@ -15,6 +15,8 @@
             android:text="@string/placeholder_item_listview"
             android:textSize="18sp"
             android:textStyle="normal"
-            android:textColor="@android:color/primary_text_light" />
+            android:textColor="@android:color/primary_text_light"
+            android:maxLines="1"
+            android:ellipsize="end" />
 
 </RelativeLayout>
