--- a/Compenergy/app/src/main/res/layout/fragment_data_layout.xml
+++ b/Compenergy/app/src/main/res/layout/fragment_data_layout.xml
@@ -7,20 +7,8 @@
     android:orientation="vertical"
     android:padding="0dp" >
 
-    <SearchView
-        android:visibility="visible"
-        android:id="@+id/fragment_data_search_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="text"
-        android:queryHint="@string/data_search_hint"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp" />
-
     <EditText
-        android:visibility="gone"
+        android:visibility="visible"
         android:id="@+id/fragment_data_search"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -34,7 +22,7 @@
     <ExpandableListView
         android:id="@+id/fragment_data_expandable_list_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    </ExpandableListView>
+        android:layout_height="wrap_content"
+        android:groupIndicator="@null" />
 
 </LinearLayout>
