Added possibility to remove an item in the Data ListView with a long click on the item

--- a/Compenergy/app/src/main/res/layout/listview_item_data_layout.xml
+++ b/Compenergy/app/src/main/res/layout/listview_item_data_layout.xml
@@ -17,6 +17,7 @@
             android:textStyle="normal"
             android:textColor="@android:color/primary_text_light"
             android:maxLines="1"
-            android:ellipsize="end" />
+            android:ellipsize="end"
+            android:longClickable="true"/>
 
 </RelativeLayout>
