Added normal onClickListener for the Data ListView, which was pretty cancer

--- a/Compenergy/app/src/main/res/layout/listview_header_data_layout.xml
+++ b/Compenergy/app/src/main/res/layout/listview_header_data_layout.xml
@@ -4,7 +4,8 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/colorAccent" >
+    android:background="@color/colorAccent"
+    android:descendantFocusability="blocksDescendants" >
 
     <TextView
         android:id="@+id/fragment_data_list_view_category"
