--- a/Compenergy/app/src/main/res/layout/listview_item_data_layout.xml
+++ b/Compenergy/app/src/main/res/layout/listview_item_data_layout.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:paddingStart="16dp"
     android:paddingEnd="16dp"
     android:paddingTop="8dp"
-    android:paddingBottom="8dp" >
+    android:paddingBottom="8dp"
+    android:descendantFocusability="blocksDescendants" >
 
         <TextView
             android:id="@+id/fragment_data_list_view_carrier_name"
@@ -17,7 +18,6 @@
             android:textStyle="normal"
             android:textColor="@android:color/primary_text_light"
             android:maxLines="1"
-            android:ellipsize="end"
-            android:longClickable="true"/>
+            android:ellipsize="end" />
 
-</RelativeLayout>
+</LinearLayout>
