--- a/Compenergy/app/src/main/res/layout/fragment_add_data_layout.xml
+++ b/Compenergy/app/src/main/res/layout/fragment_add_data_layout.xml
@@ -1,19 +1,124 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:paddingStart="16dp"
+    android:paddingEnd="16dp"
+    android:paddingTop="8dp"
+    android:paddingBottom="8dp" >
 
-    <TextView
-        android:id="@+id/fragment_add_data_txt_test"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
+    <EditText
+        android:id="@+id/fragment_add_data_name_edit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Add Data Fragment"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-        android:textAlignment="center" />
+        android:inputType="text"
+        android:hint="@string/add_data_name_edit_hint"
+        android:layout_marginBottom="8dp"
+        android:drawableEnd="@drawable/ic_close_black_24dp" />
 
-</RelativeLayout>
+    <johannes.mols.compenergy.InstantAutoComplete
+        android:id="@+id/fragment_add_data_category_autocomplete_edit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="text"
+        android:completionThreshold="1"
+        android:hint="@string/add_data_category_edit_hint"
+        android:layout_marginBottom="8dp"
+        android:drawableEnd="@drawable/ic_close_black_24dp" />
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp" >
+
+        <EditText
+            android:visibility="invisible"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:ignore="LabelFor,TextFields" />
+
+        <Spinner
+            android:id="@+id/fragment_add_data_type_spinner"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            style="@style/Widget.AppCompat.Spinner.Underlined"/>
+
+    </FrameLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp" >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:ignore="UselessParent" >
+
+            <EditText
+                android:id="@+id/fragment_add_data_energy_edit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="number"
+                android:hint="@string/add_data_energy_edit_hint"
+                android:layout_weight="0.7"
+                android:layout_gravity="start" />
+
+            <Spinner
+                android:id="@+id/fragment_add_data_energy_type_spinner"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="0.3"
+                android:layout_gravity="end"
+                style="@style/Widget.AppCompat.Spinner.Underlined" >
+
+            </Spinner>
+
+        </LinearLayout>
+
+    </FrameLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp" >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:ignore="UselessParent" >
+
+            <EditText
+                android:id="@+id/fragment_add_data_unit_amount_edit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="numberDecimal"
+                android:hint="@string/add_data_unit_amount_edit_hint"
+                android:layout_weight="0.7"
+                android:layout_gravity="start"/>
+
+            <Spinner
+                android:id="@+id/fragment_add_data_unit_spinner"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="0.3"
+                android:layout_gravity="end"
+                style="@style/Widget.AppCompat.Spinner.Underlined" >
+
+            </Spinner>
+
+        </LinearLayout>
+
+    </FrameLayout>
+
+    <Button
+        android:id="@+id/fragment_add_data_add_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/add_data_add_button"/>
+
+</LinearLayout>
