--- a/Compenergy/app/src/main/res/layout/fragment_add_data_layout.xml
+++ b/Compenergy/app/src/main/res/layout/fragment_add_data_layout.xml
@@ -52,27 +52,28 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp" >
+        android:layout_marginBottom="8dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:ignore="UselessParent" >
+            android:orientation="horizontal"
+            tools:ignore="UselessParent">
 
             <EditText
                 android:id="@+id/fragment_add_data_energy_edit"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:inputType="number"
+                android:inputType="numberDecimal"
                 android:hint="@string/add_data_energy_edit_hint"
-                android:layout_weight="0.7"
+                android:layout_weight="5"
                 android:layout_gravity="start" />
 
             <Spinner
                 android:id="@+id/fragment_add_data_energy_type_spinner"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="0.3"
+                android:layout_weight="5"
                 android:layout_gravity="end"
                 style="@style/Widget.AppCompat.Spinner.Underlined" >
 
@@ -94,18 +95,18 @@
 
             <EditText
                 android:id="@+id/fragment_add_data_unit_amount_edit"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:inputType="numberDecimal"
                 android:hint="@string/add_data_unit_amount_edit_hint"
-                android:layout_weight="0.7"
+                android:layout_weight="5"
                 android:layout_gravity="start"/>
 
             <Spinner
                 android:id="@+id/fragment_add_data_unit_spinner"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="0.3"
+                android:layout_weight="5"
                 android:layout_gravity="end"
                 style="@style/Widget.AppCompat.Spinner.Underlined" >
 
