--- a/Compenergy/app/src/main/res/layout/spinner_item.xml
+++ b/Compenergy/app/src/main/res/layout/spinner_item.xml
@@ -7,6 +7,7 @@
     android:textSize="18sp"
     android:gravity="start"
     android:textColor="@android:color/primary_text_light"
-    android:padding="0dp" >
+    android:padding="0dp"
+    android:ellipsize="end">
 
 </TextView>
