--- a/Compenergy/app/src/main/res/layout/fragment_add_data_layout.xml
+++ b/Compenergy/app/src/main/res/layout/fragment_add_data_layout.xml
@@ -50,6 +50,26 @@
     </FrameLayout>
 
     <FrameLayout
+        android:id="@+id/fragment_add_data_fuel_type_spinner_frame_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp" >
+
+        <EditText
+            android:visibility="invisible"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:ignore="LabelFor,TextFields" />
+
+        <Spinner
+            android:id="@+id/fragment_add_data_vehicle_fuel_type_spinner"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            style="@style/Widget.AppCompat.Spinner.Underlined"/>
+
+    </FrameLayout>
+
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp">
