Added a new Activity to edit an item

--- a/Compenergy/app/src/main/res/layout/act_edit_layout.xml
+++ b/Compenergy/app/src/main/res/layout/act_edit_layout.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="johannes.mols.compenergy.ActMain">
+    tools:context="johannes.mols.compenergy.ActEditCarrier">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -14,7 +14,7 @@
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
+            android:id="@+id/toolbar_edit"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
@@ -23,6 +23,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/act_main_content" />
+    <include layout="@layout/act_edit_content" />
 
 </android.support.design.widget.CoordinatorLayout>
