--- a/Compenergy/app/src/main/res/layout/fragment_data_layout.xml
+++ b/Compenergy/app/src/main/res/layout/fragment_data_layout.xml
@@ -21,7 +21,7 @@
     <ExpandableListView
         android:id="@+id/fragment_data_expandable_list_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:groupIndicator="@null" />
 
 </LinearLayout>
