--- a/Compenergy/app/src/main/res/layout/fragment_about_layout.xml
+++ b/Compenergy/app/src/main/res/layout/fragment_about_layout.xml
@@ -15,6 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/about_title_app_name"
-        android:textAlignment="textStart" />
+        android:textAlignment="textStart"
+        android:textColor="@android:color/primary_text_light"/>
 
 </LinearLayout>
