--- a/Compenergy/app/src/main/res/values/colors.xml
+++ b/Compenergy/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#689f38</color>
     <color name="colorPrimaryDark">#387002</color>
     <color name="colorAccent">#99d066</color>
+
+    <color name="about_value_text">#212121</color>
+    <color name="about_header_text">#757575</color>
 </resources>
