--- a/Compenergy/app/src/main/res/layout/fragment_data_layout.xml
+++ b/Compenergy/app/src/main/res/layout/fragment_data_layout.xml
@@ -16,7 +16,8 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp" />
+        android:layout_marginEnd="10dp"
+        android:drawableEnd="@drawable/ic_close_black_24dp"/>
 
     <ExpandableListView
         android:id="@+id/fragment_data_expandable_list_view"
