--- a/Compenergy/app/src/main/res/layout/listview_header_data_layout.xml
+++ b/Compenergy/app/src/main/res/layout/listview_header_data_layout.xml
@@ -2,11 +2,13 @@
 
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/colorAccent"
-    android:descendantFocusability="blocksDescendants" >
+    android:descendantFocusability="blocksDescendants"
+    tools:ignore="Overdraw">
 
     <TextView
         android:id="@+id/fragment_data_list_view_category"
