--- a/Compenergy/app/src/main/res/layout/fragment_compare_layout.xml
+++ b/Compenergy/app/src/main/res/layout/fragment_compare_layout.xml
@@ -31,21 +31,41 @@
             android:layout_alignParentTop="true"
             android:layout_alignParentBottom="false"
             android:layout_centerHorizontal="true"
-            android:text="@string/placeholder_item_name" />
+            android:text="@string/placeholder_test_item_1_name" />
 
-        <TextView
-            android:id="@+id/fragment_compare_upper_item_energy"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/fragment_compare_upper_item_linear_layout_amount_and_unit"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAlignment="textStart"
-            android:textSize="22sp"
-            android:textColor="@color/gray_text"
-            android:textStyle="bold"
-            android:maxLines="1"
-            android:ellipsize="end"
-            android:layout_alignParentStart="true"
-            android:layout_below="@id/fragment_compare_upper_item_name"
-            android:text="@string/placeholder_item_energy" />
+            android:orientation="horizontal"
+            android:layout_below="@id/fragment_compare_upper_item_name">
+
+            <TextView
+                android:id="@+id/fragment_compare_upper_item_energy"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="bottom"
+                android:textSize="22sp"
+                android:textColor="@color/gray_text"
+                android:textStyle="bold"
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:text="@string/placeholder_test_item_1_energy" />
+
+            <TextView
+                android:id="@+id/fragment_compare_upper_item_energy_unit"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="bottom"
+                android:textSize="16sp"
+                android:textColor="@color/gray_text"
+                android:textStyle="bold"
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:layout_marginStart="8dp"
+                android:text="@string/placeholder_test_item_1_unit"/>
+
+        </LinearLayout>
 
     </RelativeLayout>
 
@@ -80,7 +100,42 @@
             android:layout_alignParentEnd="true"
             android:layout_alignParentTop="false"
             android:layout_alignParentBottom="false"
-            android:text="@string/placeholder_item_name" />
+            android:layout_below="@+id/fragment_compare_lower_item_linear_layout_amount_and_unit"
+            android:text="@string/placeholder_test_item_2_name" />
+
+        <LinearLayout
+            android:id="@+id/fragment_compare_lower_item_linear_layout_amount_and_unit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="end">
+
+            <TextView
+                android:id="@+id/fragment_compare_lower_item_energy_unit"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="bottom"
+                android:textSize="16sp"
+                android:textColor="@color/gray_text"
+                android:textStyle="bold"
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:layout_marginEnd="8dp"
+                android:text="@string/placeholder_test_item_2_unit"/>
+
+            <TextView
+                android:id="@+id/fragment_compare_lower_item_energy"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="bottom"
+                android:textSize="22sp"
+                android:textColor="@color/gray_text"
+                android:textStyle="bold"
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:text="@string/placeholder_test_item_2_energy" />
+
+        </LinearLayout>
 
     </RelativeLayout>
 
